<resources>
    <string name="app_name">Seminar4</string>
    <string name="apasatiAici">Apasati aici</string>
    <string name="adaugatiMasina">Adaugati masina</string>
    <string name="incalzireScaune">Incalzire in scaune</string>
    <string name="senzori">Senzori</string>
    <string name="camera">Camera</string>
    <string-array name="sursaEnergie">
        <item>Benzina</item>
        <item>Motorina</item>
        <item>Electric</item>
        <item>Hibrid</item>
        <item>GPL</item>
    </string-array>
    <string name="transmisieOn">Automata</string>
    <string name="transmisieOff">Manuala</string>
    <string name="faraAvarii">Neavariata</string>
    <string name="avarii">Avariata</string>
    <string name="orasul_si_vremea">Orasul si vremea</string>
    <string name="introduceti_un_oras">Introduceti un oras:</string>
    <string name="vremea_orasului">Vremea orasului</string>
    <string name="introduceti_oras">Oras</string>
    <string name="automobile_favorite">Automobile favorite</string>
    <string name="lista_firme_masini_de_lux">Lista firme masini de lux</string>
</resources>