<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.251" />

    <Button
        android:id="@+id/apasatiAici"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apasatiAici"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.336" />

    <Button
        android:id="@+id/butonListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lista Automobile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.568"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apasatiAici"
        app:layout_constraintVertical_bias="0.155" />

    <Button
        android:id="@+id/butonActivitateOras"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="114dp"
        android:text="@string/orasul_si_vremea"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.57"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/butonListView"
        app:layout_constraintVertical_bias="0.101" />

    <Button
        android:id="@+id/btnListaImagini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lista_firme_masini_de_lux"
        app:layout_constraintBottom_toTopOf="@+id/butonActivitateOras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.618"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/butonListView"
        app:layout_constraintVertical_bias="0.238" />

    <Button
        android:id="@+id/btnAutomobileFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/automobile_favorite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/butonActivitateOras"></Button>


</androidx.constraintlayout.widget.ConstraintLayout>